inital styling and layout

--- a/client/src/static/css/LoginForm.css
+++ b/client/src/static/css/LoginForm.css
@@ -1,4 +1,9 @@
 #LoginForm {
   width: 100%;
   height: 100%;
+  padding: 1em;
+  border: 1px solid black;
+  background-color: #76777A;
+  -webkit-box-shadow: 0.25em 0.25em 5em 1em rgba(16, 16, 16, 0.3);
+          box-shadow: 0.25em 0.25em 5em 1em rgba(16, 16, 16, 0.3);
 }
