--- a/client/src/static/sass/Home.sass
+++ b/client/src/static/sass/Home.sass
@@ -2,16 +2,20 @@
     width: 100%
     height: 100%
 
-    padding: 10px
+    padding: 1em
 
     background-color: #76777A
 
     display: flex
     flex-direction: column
 
+    box-shadow: inset 0.25em 0.25em 5em 1em rgba( 16, 16, 16, 0.3 )
+
     header
         width: 100%
         height: fit-content
+
+        margin-bottom: 1.5em // This should be 1/2 the heading's font size
 
         display: flex
         justify-content: center
@@ -22,11 +26,35 @@
             display: flex
             gap: 0.5em
 
-            h1
+            h1:nth-child( 1 )
                 color: #F4F2EC
 
             h1:nth-child( 2 )
                 color: #AB2B46
+
+            h1
+                font-size: 3em
+
+                // This is literally everything for the text shadow
+                // It looks like way too much but each shadow only has the width and height of the text
+
+                // Add more shadows to make it thicker, remove shadows to make it thinner
+                // More even transitions between shadows will make it appear softer
+                $text-shadow-1: rgba( 16, 16, 16, 0.5 )
+                $text-shadow-2: rgba( 16, 16, 16, 0.3 )
+                $text-shadow-3: rgba( 16, 16, 16, 0.1 )
+
+                text-shadow: 1px 1px 1px $text-shadow-1,
+                1px 2px 1px $text-shadow-1,
+                1px 3px 1px $text-shadow-1,
+                1px 4px 1px $text-shadow-1,
+                1px 5px 1px $text-shadow-1,
+                1px 6px 1px $text-shadow-1,
+
+                // Lighter shadows
+                1px 10px 6px $text-shadow-2,
+                1px 15px 10px $text-shadow-3,
+                1px 20px 35px $text-shadow-3,
 
     main
         flex-grow: 1
