--- a/client/src/static/sass/LoginForm.sass
+++ b/client/src/static/sass/LoginForm.sass
@@ -1,3 +1,14 @@
 #LoginForm
     width: 100%
     height: 100%
+
+    padding: 1em
+
+    border: 1px solid black
+
+    // Same background color as #Home
+    background-color: #76777A
+
+    // The box shadow on the Home component is inset
+    // Creating an opposing outset shadow helps establish depth
+    box-shadow: 0.25em 0.25em 5em 1em rgba( 16, 16, 16, 0.3 )
