--- a/client/src/static/css/Home.css
+++ b/client/src/static/css/Home.css
@@ -1,7 +1,7 @@
 #Home {
   width: 100%;
   height: 100%;
-  padding: 10px;
+  padding: 1em;
   background-color: #76777A;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -10,6 +10,8 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-shadow: inset 0.25em 0.25em 5em 1em rgba(16, 16, 16, 0.3);
+          box-shadow: inset 0.25em 0.25em 5em 1em rgba(16, 16, 16, 0.3);
 }
 
 #Home header {
@@ -17,6 +19,7 @@
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
+  margin-bottom: 1.5em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -35,12 +38,17 @@
   gap: 0.5em;
 }
 
-#Home header span h1 {
+#Home header span h1:nth-child(1) {
   color: #F4F2EC;
 }
 
 #Home header span h1:nth-child(2) {
   color: #AB2B46;
+}
+
+#Home header span h1 {
+  font-size: 3em;
+  text-shadow: 1px 1px 1px rgba(16, 16, 16, 0.5), 1px 2px 1px rgba(16, 16, 16, 0.5), 1px 3px 1px rgba(16, 16, 16, 0.5), 1px 4px 1px rgba(16, 16, 16, 0.5), 1px 5px 1px rgba(16, 16, 16, 0.5), 1px 6px 1px rgba(16, 16, 16, 0.5), 1px 10px 6px rgba(16, 16, 16, 0.3), 1px 15px 10px rgba(16, 16, 16, 0.1), 1px 20px 35px rgba(16, 16, 16, 0.1);
 }
 
 #Home main {
