--- a/client/src/static/css/Home.css
+++ b/client/src/static/css/Home.css
@@ -10,6 +10,9 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-shadow: inset 0.25em 0.25em 5em 1em rgba(16, 16, 16, 0.3);
           box-shadow: inset 0.25em 0.25em 5em 1em rgba(16, 16, 16, 0.3);
 }
