--- a/client/src/static/css/LoginForm.css
+++ b/client/src/static/css/LoginForm.css
@@ -1,9 +1,15 @@
 #LoginForm {
-  width: 100%;
-  height: 100%;
+  width: 30em;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
   padding: 1em;
   border: 1px solid black;
   background-color: #76777A;
   -webkit-box-shadow: 0.25em 0.25em 5em 1em rgba(16, 16, 16, 0.3);
           box-shadow: 0.25em 0.25em 5em 1em rgba(16, 16, 16, 0.3);
+}
+
+#LoginForm #RegistrationForm {
+  width: 100%;
 }
