--- a/client/src/static/sass/Home.sass
+++ b/client/src/static/sass/Home.sass
@@ -8,6 +8,7 @@
 
     display: flex
     flex-direction: column
+    align-items: center
 
     box-shadow: inset 0.25em 0.25em 5em 1em rgba( 16, 16, 16, 0.3 )
 
