--- a/client/src/static/sass/LoginForm.sass
+++ b/client/src/static/sass/LoginForm.sass
@@ -1,6 +1,6 @@
 #LoginForm
-    width: 100%
-    height: 100%
+    width: 30em
+    height: fit-content
 
     padding: 1em
 
@@ -12,3 +12,6 @@
     // The box shadow on the Home component is inset
     // Creating an opposing outset shadow helps establish depth
     box-shadow: 0.25em 0.25em 5em 1em rgba( 16, 16, 16, 0.3 )
+
+    #RegistrationForm
+        width: 100%
