--- a/client/src/static/sass/index.sass
+++ b/client/src/static/sass/index.sass
@@ -4,6 +4,15 @@
 
     box-sizing: border-box
 
+    font-family: "Netflix Sans Regular"
+
 body, #root
     width: 100vw
     height: 100vh
+
+@font-face
+    font-family: "Netflix Sans Regular"
+    font-style: normal
+    font-weight: normal
+    src: local( "Netflix Sans Regular" ),
+    url( "../fonts/NetflixSansRegular.woff" ) format( "woff" )
