--- a/client/src/static/css/Home.css
+++ b/client/src/static/css/Home.css
@@ -1,8 +1,8 @@
 #Home {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   padding: 1em;
-  background-color: #76777A;
+  background-color: #292B2C;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
