--- a/client/src/static/css/LoginForm.css
+++ b/client/src/static/css/LoginForm.css
@@ -1,15 +1,56 @@
 #LoginForm {
-  width: 30em;
+  width: 20em;
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
   padding: 1em;
   border: 1px solid black;
-  background-color: #76777A;
+  background-color: #292B2C;
   -webkit-box-shadow: 0.25em 0.25em 5em 1em rgba(16, 16, 16, 0.3);
           box-shadow: 0.25em 0.25em 5em 1em rgba(16, 16, 16, 0.3);
+  font-size: 1.3em;
+}
+
+#LoginForm form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 10px;
+}
+
+#LoginForm form:nth-child(1) input[type="submit"] {
+  margin-top: -10px;
+}
+
+#LoginForm form:nth-child(2) {
+  margin-top: 30px;
+  padding-top: 20px;
+  border-top: 1px solid black;
+}
+
+#LoginForm input {
+  height: 1.7em;
+  padding: .1em;
+  background-color: #F4F2EC;
+}
+
+#LoginForm h3, #LoginForm label, #LoginForm input[type="submit"] {
+  color: #F4F2EC;
+}
+
+#LoginForm input[type="submit"] {
+  background-color: #AB2B46;
 }
 
 #LoginForm #RegistrationForm {
   width: 100%;
+}
+
+#LoginForm * {
+  margin: 0;
+  padding: 0;
 }
