--- a/client/src/static/css/index.css
+++ b/client/src/static/css/index.css
@@ -3,9 +3,17 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  font-family: "Netflix Sans Regular";
 }
 
 body, #root {
   width: 100vw;
   height: 100vh;
+}
+
+@font-face {
+  font-family: "Netflix Sans Regular";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Netflix Sans Regular"), url("../fonts/NetflixSansRegular.woff") format("woff");
 }
