--- a/client/src/static/sass/Home.sass
+++ b/client/src/static/sass/Home.sass
@@ -1,10 +1,10 @@
 #Home
     width: 100%
-    height: 100vh
+    min-height: 100vh
 
     padding: 1em
 
-    background-color: #76777A
+    background-color: #292B2C
 
     display: flex
     flex-direction: column
