--- a/client/src/static/sass/LoginForm.sass
+++ b/client/src/static/sass/LoginForm.sass
@@ -5,6 +5,7 @@
     padding: 1em
 
     border: 1px solid black
+    border-radius: 1em
 
     // Same background color as #Home
     background-color: #292B2C
@@ -32,9 +33,14 @@
     input
         height: 1.7em
 
-        padding: .1em
-
         background-color: #F4F2EC
+
+        border: 1px solid black
+
+    h3, label
+        text-shadow: 1px 1px 1px #000000,
+        1px 2px 1px #000000,
+        1px 3px 1px #000000
 
     h3, label, input[ type = "submit" ]
         color: #F4F2EC
