--- a/client/src/static/css/LoginForm.css
+++ b/client/src/static/css/LoginForm.css
@@ -37,10 +37,12 @@
   height: 1.7em;
   background-color: #F4F2EC;
   border: 1px solid black;
+  -webkit-box-shadow: 2px 2px 2px 2px rgba(16, 16, 16, 0.5);
+          box-shadow: 2px 2px 2px 2px rgba(16, 16, 16, 0.5);
 }
 
-#LoginForm h3, #LoginForm label {
-  text-shadow: 1px 1px 1px #000000, 1px 2px 1px #000000, 1px 3px 1px #000000;
+#LoginForm h3, #LoginForm label, #LoginForm p {
+  text-shadow: 1px 1px 1px rgba(16, 16, 16, 0.5), 1px 2px 1px rgba(16, 16, 16, 0.5), 1px 3px 1px rgba(16, 16, 16, 0.5);
 }
 
 #LoginForm h3, #LoginForm label, #LoginForm input[type="submit"] {
@@ -49,6 +51,10 @@
 
 #LoginForm input[type="submit"] {
   background-color: #AB2B46;
+}
+
+#LoginForm p {
+  margin-bottom: 10px;
 }
 
 #LoginForm #RegistrationForm {
