--- a/client/src/static/sass/LoginForm.sass
+++ b/client/src/static/sass/LoginForm.sass
@@ -37,16 +37,23 @@
 
         border: 1px solid black
 
-    h3, label
-        text-shadow: 1px 1px 1px #000000,
-        1px 2px 1px #000000,
-        1px 3px 1px #000000
+        box-shadow: 2px 2px 2px 2px rgba( 16, 16, 16, 0.5 )
+
+    h3, label, p
+        $shadow: rgba( 16, 16, 16, 0.5 )
+
+        text-shadow: 1px 1px 1px $shadow,
+        1px 2px 1px $shadow,
+        1px 3px 1px $shadow
 
     h3, label, input[ type = "submit" ]
         color: #F4F2EC
 
     input[ type = "submit" ]
         background-color: #AB2B46
+
+    p
+        margin-bottom: 10px
 
     #RegistrationForm
         width: 100%
