--- a/client/src/static/sass/index.sass
+++ b/client/src/static/sass/index.sass
@@ -10,6 +10,9 @@ body, #root
     width: 100vw
     height: 100vh
 
+.logo
+    height: 2em
+
 @font-face
     font-family: "Netflix Sans Regular"
     font-style: normal
