--- a/client/src/static/css/App.css
+++ b/client/src/static/css/App.css
@@ -2,3 +2,13 @@
   width: 100%;
   height: 100%;
 }
+
+#NavBar {
+  width: 100%;
+
+  background-color: transparent;
+  background-image: linear-gradient( #292B2C 80%, transparent );
+
+  position: fixed;
+  z-index: 1000000000;
+}
