--- a/client/src/static/css/Browse.css
+++ b/client/src/static/css/Browse.css
@@ -1,3 +1,15 @@
 #Browse {
-    width: 100vw;
+    width: 100%;
+}
+
+#TEMP {
+    width: 100%;
+    height: 100%;
+
+    margin-top: 5px;
+
+    box-shadow: 48.795vw -20px 11px #292B2C, -48.795vw -20px 11px #292B2C;
+    background-color: #292B2C;
+    color: white;
+    position: absolute;
 }
