--- a/client/src/static/css/App.css
+++ b/client/src/static/css/App.css
@@ -6,6 +6,9 @@
 #NavBar {
   width: 100%;
 
+  padding-top: 1.5em;
+  padding-bottom: 3em;
+
   background-color: transparent;
   background-image: linear-gradient( #292B2C 80%, transparent );
 
