--- a/client/src/static/css/App.css
+++ b/client/src/static/css/App.css
@@ -7,12 +7,16 @@
   width: 100%;
   min-height: 6em;
 
-  padding-top: 1.5em;
-  padding-bottom: 3em;
+  padding-top: 2em;
+  padding-bottom: 4em;
 
   background-color: transparent;
   background-image: linear-gradient( #292B2C 80%, transparent );
 
   position: fixed;
   z-index: 1000000000;
+}
+
+#NavBar img {
+  margin-right: 10px;
 }
