--- a/client/src/static/css/MyList.css
+++ b/client/src/static/css/MyList.css
@@ -14,12 +14,13 @@
             align-items: center;
     -webkit-box-shadow: inset 0.25em 0.25em 1.5em 1.5em rgba(16, 16, 16, 0.2);
             box-shadow: inset 0.25em 0.25em 1.5em 1.5em rgba(16, 16, 16, 0.2);
-  }
+}
 
 
 
 .contentWrapper {
     padding: 1em;
+    margin-top: 6.5em;
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -29,9 +30,19 @@
 
 #content {
     height: 10em;
-    width: 20em;
-    border: 2px solid white;
+    width: 15em;
     margin-left: 5px;
     margin-right: 5px;
     margin-top: 5px;
+    transition: transform 500ms;
+}
+
+#mediaIMG {
+    height: 10em;
+    width: 15em;
+}
+
+#content:focus,
+#content:hover{
+    transform: scale(1.3);
 }
