--- a/client/src/static/css/App.css
+++ b/client/src/static/css/App.css
@@ -7,8 +7,8 @@
   width: 100%;
   min-height: 6em;
 
-  padding-top: 2em;
-  padding-bottom: 4em;
+  padding-top: 1em;
+  padding-bottom: 3em;
 
   background-color: transparent;
   background-image: linear-gradient( #292B2C 80%, transparent );
@@ -19,4 +19,8 @@
 
 #NavBar img {
   margin-right: 10px;
+}
+
+#NavBar li {
+  margin-bottom: -15px;
 }
