--- a/client/src/static/css/Row.css
+++ b/client/src/static/css/Row.css
@@ -10,7 +10,7 @@
 
 #right-button {
   position: absolute;
-  right: calc( 0% + 20px );
+  right: 0%;
   z-index: 10;
   height: 150px;
   width: 40px;
