--- a/client/src/static/css/ProfileIMG.css
+++ b/client/src/static/css/ProfileIMG.css
@@ -4,5 +4,8 @@
 
 }
 .profilePosition {
-    margin: 15em 5em;
+    width: 100%;
+    margin: 15em auto;
+    display: flex;
+    justify-content: space-evenly;
 }
