--- a/client/src/static/css/MyList.css
+++ b/client/src/static/css/MyList.css
@@ -1,6 +1,6 @@
 #MyList {
     width: 100%;
-    min-height: 100vh;
+    min-height: 100%;
     background-color: #292B2C;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -22,7 +22,7 @@
     padding: 1em;
     margin-top: 6.5em;
     width: 100vw;
-    height: 100vh;
+    min-height: 100%;
     display: flex;
     flex-wrap: wrap;
     align-content: flex-start;
