--- a/client/src/static/css/Browse.css
+++ b/client/src/static/css/Browse.css
@@ -7,6 +7,7 @@
     height: calc( 100% - 5px );
 
     margin-top: 5px;
+    padding: 10px;
 
     box-shadow: 48.795vw -20px 11px #292B2C, -48.795vw -20px 11px #292B2C;
     background-color: #292B2C;
