--- a/client/src/static/css/ProfileIMG.css
+++ b/client/src/static/css/ProfileIMG.css
@@ -69,7 +69,20 @@
     border-bottom: 0.5px solid grey;
     padding: 0.2em 0;
 }
-
+.mainBox{
+    display: flex;
+    width: 100%;
+    margin: 0 auto;
+    padding: 2em 0;
+}
+.rightSide {
+    width: 80%;
+    padding-left: 1em;
+}
+.editSection {
+    border-top: 0.5px solid grey;
+    padding: 1em 0;
+}
 
 
 /* #ff0000  */
